// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AreaSearchInputField should render correctly and match snapshot 1`] = `
<DocumentFragment>
  .c3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  display: block;
  margin-bottom: 15px;
  color: #6f777b;
}

.c2 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  margin-top: 0;
  padding: 5px;
  border: 2px solid #0b0c0c;
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin-bottom: 0;
}

.c4:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.c4[type="number"] {
  -moz-appearance: textfield;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
}

.c1:after {
  content: '';
  display: table;
  clear: both;
}

.c0 {
  margin-bottom: 5px;
}

@media print {
  .c3 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c2 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c2 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    margin-bottom: 0;
  }
}

@media print {
  .c4 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

<div
    class="c0"
  >
    <label
      class="c1"
      data-testid="search-form-input-area"
    >
      <span
        class="c2"
      >
        Search for an area
      </span>
      <span
        class="c3"
      >
        <div
          style="color: rgb(80, 90, 95);"
        >
          For example district, county, region, NHS organisation or GP practice or code
        </div>
      </span>
      <input
        class="c4"
        id="areaSearched"
        name="areaSearched"
        value="London"
      />
    </label>
  </div>
</DocumentFragment>
`;

exports[`Testing the AreaSearchInputField take a snapshot of the UI 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
}

.c1:after {
  content: '';
  display: table;
  clear: both;
}

.c8 {
  display: block;
}

.c6 {
  width: 100%;
  height: 40px;
  padding: 6px;
  margin: 0;
  border: solid 1px #bfc1c3;
  border-right: 0;
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.75;
  background: #ffffff;
  border-radius: 0;
  -webkit-appearance: none;
}

.c6:focus {
  margin-right: 3px;
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c6:focus ~ button {
  width: 46px;
}

.c7 {
  background-color: #2b8cc4;
  border: 0;
  display: block;
  color: #ffffff;
  position: relative;
  padding: 10px;
  width: 45px;
  height: 40px;
  background-repeat: no-repeat;
  background-position: 2px 50%;
  text-indent: -999em;
  overflow: hidden;
}

.c7:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background: #ffffff;
  margin-bottom: 0;
}

.c0 {
  margin-bottom: 5px;
  white-space: 6;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0.12em solid #000000;
}

.c2 {
  padding: 0px;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  font-weight: 400;
  font-size: 19px;
  font-family: "nta",Arial,sans-serif;
  text-align: left;
}

.c3 {
  color: #505a5f;
  font-size: 19px;
  line-height: 1.3157894736842106;
  font-family: "nta",Arial,sans-serif;
  margin-bottom: 15px;
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    margin-bottom: 0;
  }
}

<div
    class="c0"
  >
    <label
      class="c1 c2"
    >
      Search for an area
    </label>
    <div
      class="c3"
    >
      For example district, county, region, NHS organisation or GP practice or code
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <input
          class="c6"
          type="search"
        />
        <button
          class="c7"
          title="Search"
        >
          <svg
            class="c8"
            fill="#ffffff"
            height="100%"
            version="1.1"
            viewBox="0 0 57 57"
            width="100%"
          >
            <title>
              Search
            </title>
            <path
              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
